--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </header>
 
     <section>
+      <h2><strong> Minu info </strong></h2>
       <div>
           <img src="res/images/me.png" width="128" height="128" alt="My picture">
       </div>
@@ -28,7 +29,7 @@
   </section>
 
   <section>
-    <h1>Courses</h1>
+    <h2>Courses</h2>
     <table>
         <thead>
         <tr>
@@ -77,6 +78,8 @@
 
 <section>
   <br>
+  <h2><strong> Add new course </strong></h2>
+  <br>
   <form>
     <label>Course Title: </label> <br>
     <input type="text" name="name"><br>
@@ -87,8 +90,8 @@
       <option value="Spring">Spring</option>
   </select><br>
   <label><strong>Attendance:</strong> </label> <br>
-  <input type = "radio" name = "Virtual attendance" value = "Virtual attendance"> Virtual attendance <br>
-  <input type = "radio" name = "Physical attendance" value = "Physical attendance"> Physical attendance <br>
+  <input type = "radio" name = "attendance" value = "Virtual attendance"> Virtual attendance <br>
+  <input type = "radio" name = "attendance" value = "Physical attendance"> Physical attendance <br>
   <input type="submit" value="Submit">
 </form>
 
